--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     }
   },
   "require": {
-    "noclued/githelper": "^1.0",
+    "noclued/githelper": "1.1",
     "noclued/param_recognizer": "1.1"
   }
 }
